[SW-497] Spark 2.2 integration (#346)
* [SW-497] Spark 2.2 integration

- Fix Java Documentation
- Enable testing in trevis on OpenjDK8 and OracleJDK8
- Fix failing test. This is caused by a bug fix in Spark - https://issues.apache.org/jira/browse/SPARK-14584
- Remove usage of PermGem since on Java8 it's available
- Upgrade mininal python version to 2.7

(cherry picked from commit 215ea41790d867be5404871fe38c2b6109d7ce26)

* Update snapshot version

(cherry picked from commit d0ea52e2fe1e8a07d7f1924cbdad53be6f8101bf)

* explicitly set JAVA_HOME

(cherry picked from commit 5392eea7f6be559bc1ea55ae481f6b6d1b36c23e)

* remove permgen from examples

(cherry picked from commit 176160a763bf9036e1f8689159b7c6813e4e73c9)

* Remove permgen settings

(cherry picked from commit 3ef9ec260c8aa781d212afd52268b1ddcc0bbbdc)

* Update JenkinsFile

(cherry picked from commit f3a60fcf1a2282825e8db9e7887af72755c8c7de)

* remove permgen configuration from itest.gradle

(cherry picked from commit 552e7b5965f41307443b8bf137e498b449dc780f)

* Bump target jvm version

(cherry picked from commit b0e03a5116a773008a6f7dc24b66f940dab2c6e0)

* change target version

* Fix the test