@@ -33,7 +33,6 @@ spark-submit \
 --driver-java-options "$SCRIPT_H2O_SYS_OPS" \
 --deploy-mode "$SCRIPT_DEPLOY_MODE" \
 --py-files "$PY_ZIP_FILE" \
---conf spark.driver.extraJavaOptions="-XX:MaxPermSize=384m" \
 $VERBOSE \
 "$@"
 
